<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="20sp" />

    <Button
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/done"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/task_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cancel"
        android:layout_marginTop="10dp"
        android:hint="@string/content" />

    <EditText
        android:id="@+id/task_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/task_content"
        android:layout_marginTop="10dp"
        android:hint="@string/time" />

</RelativeLayout>
