<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#00000000"
	tools:context=".MainActivity"
	android:orientation="vertical">
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1.0"
	    android:orientation="horizontal">
	 	<Button 
	      android:id="@+id/music_bt_id"
	      android:layout_width="0dp"
	      android:layout_height="match_parent"
	      android:layout_weight="1.0"
	      android:enabled="false"
	      android:text="@string/music"
	      android:textSize="50sp"
	      android:textColor="#ffc4c4c4"
	      android:layout_margin="15dp"
	      android:layout_marginRight="8dp"
	      android:background="#ffdbdbdb"
	      android:padding="15dp"/>
 	
	  	<Button 
	      android:id="@+id/alert_bt_id"
	      android:layout_width="0dp"
	      android:layout_height="match_parent"
	      android:layout_weight="1.0"
	      android:enabled="false"
	      android:text="@string/alert"
	      android:textSize="50sp"
	      android:textColor="#ffc4c4c4"
	      android:layout_margin="15dp"
	      android:layout_marginLeft="8dp"
	      android:background="#ffdbdbdb"
	      android:padding="15dp"/>    
	</LinearLayout>
	
    <Button 
     android:id="@+id/airkiss_bt_id"
     android:layout_width="match_parent"
     android:layout_height="0dp"
     android:layout_weight="1.0"
     android:text="@string/airkiss"
     android:textSize="60sp"
     android:textColor="#ffc4c4c4"
     android:layout_margin="15dp"
     android:layout_marginTop="1dp"
     android:background="#ffdbdbdb"
     android:padding="15dp"/>
</LinearLayout>

